--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,16 +1,21 @@
 image: atlassian/default-image:3
 
 pipelines:
-  default:
-    - step:
-        name: 'Deployment'
-        script:
-          - echo 'Deploying to production'
-          - apt-get update && apt-get install -y lftp
-          - composer install --no-dev --prefer-dist
-          - php artisan optimize
-          - php artisan route:cache
-          - php artisan view:cache
-          - php artisan config:cache
-          - npm install && npm run production # Assuming you're using npm for asset compilation
-          - lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; set ftp:ssl-allow no; mirror -R ./ /htdocs"
+  branches:
+    master:
+      - step:
+          name: 'Deployment'
+          script:
+            - echo 'Deploying to production'
+            # Add conditions to check if the commit is tagged with a specific pattern
+            - if [[ "$BITBUCKET_TAG" =~ ^release-.*$ ]]; then
+                apt-get update && apt-get install -y lftp
+                composer install --no-dev --prefer-dist
+                php artisan optimize
+                php artisan route:cache
+                php artisan view:cache
+                php artisan config:cache
+                php artisan migrate --force
+                npm install && npm run production
+                lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; set ftp:ssl-allow no; mirror -R ./ /htdocs"
+              fi
