--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,5 +1,4 @@
 image: atlassian/default-image:3
-
 pipelines:
   default:
     - step:
@@ -16,5 +15,5 @@ pipelines:
                 php artisan config:cache
                 php artisan migrate --force
                 npm install && npm run production
-                lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; set ftp:ssl-allow no; mirror -R ./ /htdocs"
+                lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; set ftp:ssl-allow yes; mirror -R ./ /htdocs"
             fi
