--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,7 @@ pipelines:
         script:
           - echo 'Deploying to production'
           - apt-get update && apt-get install -y lftp
-          - composer install --no-dev --prefer-dist
+          - composer install 
           - php artisan optimize
           - php artisan route:cache
           - php artisan view:cache
