--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,14 +1,23 @@
-image: php:7.4
+image: atlassian/default-image:3
 
 pipelines:
-  default:
-    - step:
-        name: Build and deploy to InfinityFree
-        script:
-          - apt-get update && apt-get install -y lftp
-          - php -r "file_exists('.env') || copy('.env.example', '.env');"
-          - php artisan key:generate
-          - composer install --no-interaction --prefer-dist --optimize-autoloader
-          - npm install && npm run production
-          # Upload files to InfinityFree via FTP
-          - lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R public/ /htdocs"
+  branches:
+    master:
+      - step:
+          name: Build and deploy to InfinityFree
+          script:
+            - echo 'Deploying to production'
+            - |
+              if [[ "$BITBUCKET_TAG" =~ ^release-.*$ ]]; then
+                apt-get update && apt-get install -y lftp
+                php -r "file_exists('.env') || copy('.env.example', '.env');"
+                php artisan key:generate
+                composer install --no-interaction --prefer-dist --optimize-autoloader
+                php artisan optimize
+                php artisan route:cache
+                php artisan view:cache
+                php artisan config:cache
+                php artisan migrate --force
+                npm install && npm run production
+                lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; set ftp:ssl-allow yes; mkdir -p /htdocs/laravel; mirror -R ./ /htdocs/laravel; mirror -R ./public/ /htdocs"
+              fi
