--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
