--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
