--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "livewire/livewire": "^2.12",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-activitylog": "^4.8",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "symfony/var-dumper": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
